// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboBox Controlled ComboBox renders basic controlled components 1`] = `
<body>
  <div>
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="test"
      class="box relative"
      role="combobox"
    >
      <span>
        <label
          class="label"
          for="combobox-test"
        >
          <div
            class="formLabel"
          >
            <div
              class="default alignStart breakWord Text fontSize100 fontWeightNormal"
            >
              label
            </div>
          </div>
        </label>
        <div
          class="box relative"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="textField base enabled normal md medium actionButton md truncate"
            id="combobox-test"
            placeholder="placeholder"
            type="text"
            value=""
          />
          <div
            class="actionButtonContainer"
          >
            <div
              aria-hidden="true"
              class="box circle marginEnd2 xsDisplayFlex xsItemsCenter"
              style="height: 100%;"
            >
              <div
                aria-disabled="false"
                class="tapTransition circle accessibilityOutline fullWidth pointer"
                role="button"
                tabindex="-1"
              >
                <div
                  class="pog transparent"
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="default icon iconBlock"
                    height="12"
                    role="img"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`ComboBox Controlled ComboBox with Tags renders with tags 1`] = `
<body>
  <div>
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="test"
      class="box relative"
      role="combobox"
    >
      <span>
        <label
          class="label"
          for="combobox-test"
        >
          <div
            class="formLabel"
          >
            <div
              class="default alignStart breakWord Text fontSize100 fontWeightNormal"
            >
              label
            </div>
          </div>
        </label>
        <div
          class="box relative"
        >
          <div
            class="textField base enabled normal md medium actionButton md textFieldWrapper"
          >
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="ey / em"
                  >
                    ey / em
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="he / him"
                  >
                    he / him
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="ne / nem"
                  >
                    ne / nem
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="she / her"
                  >
                    she / her
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="they / them"
                  >
                    they / them
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="ve / ver"
                  >
                    ve / ver
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="xe / xem"
                  >
                    xe / xem
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="xie / xem"
                  >
                    xie / xem
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box marginEnd1"
              style="margin-bottom: 2px;"
            >
              <div
                aria-disabled="false"
                class="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
                style="height: 24px; max-width: 300px;"
              >
                <div
                  class="box marginEnd5 xsDisplayFlex xsItemsCenter"
                  style="height: 100%;"
                >
                  <span
                    class="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
                    title="zie / zem"
                  >
                    zie / zem
                  </span>
                  <div
                    class="box"
                  >
                    <button
                      class="closeButton default tapTransition hideOutline sm"
                      type="button"
                    >
                      <div
                        class="box justifyCenter xsDisplayFlex xsItemsCenter"
                        style="margin-top: 1px; width: 100%;"
                      >
                        <svg
                          aria-label="Remove tag"
                          class="default icon iconBlock"
                          height="8"
                          role="img"
                          viewBox="0 0 24 24"
                          width="8"
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="box flexGrow marginEnd2 relative"
              style="max-width: 100%;"
            >
              <div
                aria-hidden="true"
                class="textFieldSpacer"
              />
              <input
                aria-invalid="false"
                autocomplete="off"
                class="unstyledTextField"
                id="combobox-test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="actionButtonContainer"
          >
            <div
              class="box circle marginEnd2 xsDisplayFlex xsItemsCenter"
              style="height: 100%;"
            >
              <div
                aria-disabled="false"
                aria-label="Clear selection"
                class="tapTransition circle hideOutline fullWidth pointer"
                role="button"
                tabindex="0"
              >
                <div
                  class="pog transparent"
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="default icon iconBlock"
                    height="12"
                    role="img"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`ComboBox Uncontrolled ComboBox renders default 1`] = `
<body>
  <div>
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="test"
      class="box relative"
      role="combobox"
    >
      <span>
        <label
          class="label"
          for="combobox-test"
        >
          <div
            class="formLabel"
          >
            <div
              class="default alignStart breakWord Text fontSize100 fontWeightNormal"
            >
              label
            </div>
          </div>
        </label>
        <div
          class="box relative"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="textField base enabled normal md medium actionButton md truncate"
            id="combobox-test"
            placeholder="placeholder"
            type="text"
            value=""
          />
          <div
            class="actionButtonContainer"
          >
            <div
              aria-hidden="true"
              class="box circle marginEnd2 xsDisplayFlex xsItemsCenter"
              style="height: 100%;"
            >
              <div
                aria-disabled="false"
                class="tapTransition circle accessibilityOutline fullWidth pointer"
                role="button"
                tabindex="-1"
              >
                <div
                  class="pog transparent"
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="default icon iconBlock"
                    height="12"
                    role="img"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</body>
`;

exports[`ComboBox Uncontrolled ComboBox renders disabled state 1`] = `
<body>
  <div>
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="test"
      class="box relative"
      role="combobox"
    >
      <span>
        <label
          class="label"
          for="combobox-test"
        >
          <div
            class="formLabel"
          >
            <div
              class="default alignStart breakWord Text fontSize100 fontWeightNormal"
            >
              label
            </div>
          </div>
        </label>
        <div
          class="box relative"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="textField base disabled normal md medium actionButton md truncate"
            disabled=""
            id="combobox-test"
            placeholder="placeholder"
            type="text"
            value=""
          />
        </div>
      </span>
    </div>
  </div>
</body>
`;
